Closed Bug 474651 Opened 16 years ago Closed 16 years ago

CodegenLIR does not set the TURBO flag

Categories

(Tamarin Graveyard :: Virtual Machine, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: rreitmai, Assigned: edwsmith)

References

Details

Attachments

(1 file)

When we compile a method we must set the turbo flag (should really be called jit flag) to denote that the method has been compiled. This allows the debugger to decide 'where' the locals are located. A better solution would be to standardize a means of accessing the local between interp and jit'd method then we could be rid of this flag. As an alternative we might be able to use impl32 ptr to determine if we are jit'd method. Lars mentioned that we would then need to look for 3 or 4 ptrs that represent non-jit.
+1 to renaming the flag (assuming we keep it).
Blocks: 469836
Assignee: nobody → edwsmith
Attachment #360903 - Attachment is patch: true
Attachment #360903 - Attachment mime type: application/octet-stream → text/plain
Attachment #360903 - Flags: review?(lhansen) → review+
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Resolved fixed engineering / work item that has been pushed. Setting status to verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: