Rename AbstractFunction::TURBO to JIT_IMPL, set it in CodegenLIR::emit (bug 474651 r=lhansen+)